@@ -33,9 +33,7 @@ import java.lang.management.ThreadMXBean;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -75,7 +73,7 @@ public class GetSummary implements RestReadView<ConfigResource> {
   }
 
   private TaskSummaryInfo getTaskSummary() {
-    Collection<Task<?>> pending = workQueue.getTasks();
+    List<Task<?>> pending = workQueue.getTasks();
     int tasksTotal = pending.size();
     int tasksStopping = 0;
     int tasksRunning = 0;
@@ -203,7 +201,7 @@ public class GetSummary implements RestReadView<ConfigResource> {
       // Ignored
     }
 
-    jvmSummary.currentWorkingDirectory = path(Paths.get(".").toAbsolutePath().getParent());
+    jvmSummary.currentWorkingDirectory = path(Path.of(".").toAbsolutePath().getParent());
     jvmSummary.site = path(sitePath);
     return jvmSummary;
   }
