@@ -24,7 +24,7 @@ import com.google.gerrit.server.git.GitRepositoryManager;
 import com.google.gerrit.testing.InMemoryRepositoryManager;
 import com.google.inject.ProvisionException;
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.eclipse.jgit.lib.Config;
 import org.junit.Before;
 import org.junit.Test;
@@ -37,11 +37,11 @@ public class NoteDbSchemaVersionCheckTest {
   public void setup() throws Exception {
     AllProjectsName allProjectsName = new AllProjectsName("All-Projects");
     GitRepositoryManager repoManager = new InMemoryRepositoryManager();
-    repoManager.createRepository(allProjectsName);
+    repoManager.createRepository(allProjectsName).close();
     versionManager = new NoteDbSchemaVersionManager(allProjectsName, repoManager);
     testRefAction(() -> versionManager.init());
 
-    sitePaths = new SitePaths(Paths.get("/tmp/foo"));
+    sitePaths = new SitePaths(Path.of("/tmp/foo"));
   }
 
   @Test
